gitops/envs/conf-dso/apps/argocd/templates/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: dso-argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
spec:
  ingressClassName: <path:forge-dso/data/env/conf-dso/apps/common/values#ingressClassName>
  tls:
  - hosts:
    - <path:forge-dso/data/env/conf-dso/apps/common/values#domain | jsonPath {.argocd}>
    secretName: argocd-tls-secret
  rules:
    - host: <path:forge-dso/data/env/conf-dso/apps/common/values#domain | jsonPath {.argocd}>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: conf-dso-argocd-server
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-appset-ingress
  namespace: dso-argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
spec:
  ingressClassName: <path:forge-dso/data/env/conf-dso/apps/common/values#ingressClassName>
  tls:
  - hosts:
    - appset.<path:forge-dso/data/env/conf-dso/apps/common/values#domain | jsonPath {.argocd}>
    secretName: argocd-appset-tls-secret
  rules:
    - host: appset.<path:forge-dso/data/env/conf-dso/apps/common/values#domain | jsonPath {.argocd}>
      http:
        paths:
          - path: /api/webhook
            pathType: Prefix
            backend:
              service:
                name: conf-dso-argocd-applicationset-controller
                port:
                  number: 7000
